crates/ui/src/widgets/snapshots/ui__widgets__chart__tests__chart__price_plus_equity_v1_momentum.snap
---
source: crates/ui/src/widgets/chart.rs
assertion_line: 1740
expression: chart_overlay_summary(&bars, Some(&equity), &compare)
---
widget: chart
bar_count: 60
gridlines: 5
equity_overlay: present points=60 fidelity=PerBar
equity_axis: right_gutter
equity_color: ACCENT_2
compare_count: 0
