crates/ui/src/widgets/snapshots/ui__widgets__chart__tests__chart__with_ghosts_and_fills.snap
---
source: crates/ui/src/widgets/chart.rs
expression: "chart_summary(&bars, &markers, &signals)"
---
widget: chart
bar_count: 60
gridlines: 5
empty_state: false
draw_order: gridlines,labels,line,ghosts,fills,tooltip
line_color: ACCENT
axis_range: min=39904.62 max=40242.88
fill_count: 1
ghost_count: 2
markers_buy: 1
markers_sell: 0
ghost_buy: 1
ghost_sell: 1
marker_size_px: 13
ghost_marker_size_px: 8
marker_buy_color: UP_500
marker_sell_color: DOWN_500
ghost_buy_color: UP_400
ghost_sell_color: DOWN_400
ghost_alpha: 0.6
marker_outline: BORDER_STRONG
marker_shadow: shadow_1
